Transifex and Munin Integration (#91)