@@ -47,17 +47,33 @@ public abstract class Utils {
 		for (String a : args) System.out.print(" " + a);
 		System.out.println();
 
-		Process p = Runtime.getRuntime().exec(args);
-		p.waitFor();
+		ProcessBuilder pb = new ProcessBuilder(args);
+		pb.redirectErrorStream​(true);
+		Process p = pb.start();
+
 		BufferedReader b = new BufferedReader(new InputStreamReader(p.getInputStream()));
 		String str;
-		while ((str = b.readLine()) != null) {
-			System.out.println("    # " + str);
-		}
+		while ((str = b.readLine()) != null) System.out.println("    # " + str);
 
+		p.waitFor();
 		int e = p.exitValue();
 		System.out.println("    = " + e);
 		return e;
+	}
+
+	public static String bashOutput(String... args) throws Exception {
+		Process p = new ProcessBuilder(args).start();
+		BufferedReader b = new BufferedReader(new InputStreamReader(p.getInputStream()));
+		String str, result = null;
+		while ((str = b.readLine()) != null) {
+			if (result == null) {
+				result = str;
+			} else {
+				result += "\n";
+				result += str;
+			}
+		}
+		return (result == null ? "" : result);
 	}
 
 	public static String durationString(long millis) {
